@@ -1,10 +1,16 @@
+<p align="center">
+  <b>情報系学生です。/ IT student in Japan 🇯🇵</b><br>
+  最近はコミュニティで使う Minecraft プラグインや、Discord の体験を良くする bot を作っています。<br>
+  <sub>Recently building Minecraft plugins and Discord bots for my communities.</sub>
+</p>
+
  ```text
 .warasugi@github:~$ ssh warasugi -p 777 -i ~/.ssh/id_ed25519_warasugitewara
-.warasugi@github:~$ warasfetch
-──────────────────────────────────────────────────────────────────────────────
-  ╭────────────────────────────────────────────────────────────────────────╮
-  │  name : .warasugi |  link : wired  |  mode : Student   |  ver : 17yo   │
-  ╰────────────────────────────────────────────────────────────────────────╯
+.warasugi@github:~$ java -Xms16G -Xmx16G -XX:+UseZGC -jar warasugi.jar
+------------------------------------------------------------------------------
+  +------------------------------------------------------------------------+
+  |  name : .warasugi |  link : wired  |  mode : Student   |  ver : 17yo   |
+  +------------------------------------------------------------------------+
 
                     .:--==+++********+++==--:.
                 .:-=+*##%%%%%%%%%%%%%%%%%%%%##*+=-:.
@@ -21,17 +27,41 @@
                .:-=+*##%%%%%%%%%%%%%%%%%%%%%%%%##*+=-:.
                     .:--==+++********+++==--:.
 
-──────────────────────────────────────────────────────────────────────────────
-domain    ▸ warasugi.com
-os        ▸ Windows 11 • Ubuntu Server • Proxmox etc...
-shell     ▸ Wezterm • Nushell • Starship
-packages  ▸ Neovim • Obsidian • FL Studio • SV Studio 2 etc...
-Ai-agents ▸ Claude Sonnet [Calude Pro]
+------------------------------------------------------------------------------
+Domain    ▸ warasugi.com
+Focus     ▸ Infra / Homelab • Minecraft Plugins • Discord bots
+OS        ▸ Windows 11 • Proxmox • Debian12/13 etc...
+Shell     ▸ Wezterm • Nushell • Starship
+Packages  ▸ Neovim • ZenNotes • FL Studio • SV Studio 2 etc...
+AI        ▸ Claude Pro • Google AI plus
 Keyboard  ▸ Mint 60
-──────────────────────────────────────────────────────────────────────────────
+Phone     ▸ Galaxy S26+ 256GB
+Audio     ▸ Apple Music • Foobar2000
+DAC       ▸ LIN.LIN.LIN M20 • Fiio KA13
+Earphone  ▸ qdc SUPERIOR • ACTIVO SCOOP • KZ ZSTX etc...
+TWS       ▸ Moondrop Golden Ages 2 • Earfun Air 4 Pro
+------------------------------------------------------------------------------
+.warasugi@github:~$ homelab --tree
+internet
+  └─ cloudflare tunnel / twingate (x2)
+      └─ opnsense (vm)
+          └─ proxmox cluster (3 nodes • 16 lxc + 2 vm)
+              ├─ adguard home (x2)
+              ├─ minecraft network (velocity)
+              │   └─ Debian 13 (bare metal)
+              │       └─ Purpur Server • ATM10 • etc...
+              ├─ discord bots (music • yomiage • etc...)
+              ├─ voicevox engine (vm)
+              ├─ zabbix • uptime kuma • portfolio
+              └─ etc...
+.warasugi@github:~$ homelab --full
+homelab: refusing to print 2045 lines. this is a README, not documentation.
 .warasugi@github:~$ exit
 close the world, ɟxɘn ɘ⑁ɟ nɘqo
 ``` 
+<div align="center">
+  <img src="https://raw.githubusercontent.com/warasugitewara/warasugitewara/main/dist/metrics.svg" width="900" />
+</div>
 <h2 align="center">🛠️My Favorite Languages & Others (A-Z)</h2>
 <p align="center">
   <img src="https://skillicons.dev/icons?i=androidstudio,arduino,bun,cloudflare,debian,discord,github,java,kotlin,linux,lua,md,neovim,obsidian,python,typescript,ubuntu,windows&theme=dark&perline=9" />
@@ -45,7 +75,7 @@ close the world, ɟxɘn ɘ⑁ɟ nɘqo
    　<table align="center" border="0" cellpadding="10">
 　  <tr>
  　   <td align="center" >
-   　   <img alt="count" height="160px" src="https://count.getloli.com/get/@:Warasugi-777?theme=booru-lewd" />
+   　   <img alt="count" height="160px" src="https://count.getloli.com/get/@:Warasugi-777?theme=moebooru" />
  　   </td>
   　  <td align="center" >
   　    <a href="https://discord.com/users/811515262238064640">
@@ -65,4 +95,3 @@ close the world, ɟxɘn ɘ⑁ɟ nɘqo
 - [**Uptime**](https://uptime.warasugi.com/status/waras)
 ### others
 [*icon*](https://x.com/1041uuu/status/1161923643238039552?t=pUQn79S_TW_RektbH8bZxQ)
-### Bye-bye
